--- a/public/yt.css
+++ b/public/yt.css
@@ -9,6 +9,17 @@
     font-size: 16px;
     border-radius: 50%;
 }
+.rmyt-btn{
+    width: 20px;
+    height: 20px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    background: red;
+    color: black;
+    font-size: 16px;
+    border-radius: 50%;
+}
 .ytd-rich-section-renderer[is-shorts] {
     display: none;
 }
